--- a/people.html
+++ b/people.html
@@ -112,6 +112,20 @@
 
                   <div class="row-fluid">
                      <div class="span3">
+                        <img src="thumbs/photo_adeel.jpeg" alt="Adeel Khan"/>
+                     </div>
+                     <div class="span9">
+                        <h4>Muhammad Adeel KHAN</h4>
+			<p><i>Postdoc</i></p>
+                        <p>Adeel is a recent graduate of HKU, with a degree in "Learning Sciences and Applied Neuroscience." His research focus centers on EEG, HRV, stress, and reinforcement learning.</p>
+                        <p><b>Email: </b><a href="mailto:adeel.khan@polyu.edu.hk">adeel.khan@polyu.edu.hk</a></p>
+			<p><b><a href="https://scholar.google.com/citations?user=grvmXXYAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Muhammad-Khan-665">ResearchGate</a></b></p>
+                     </div>
+                  </div>
+                  <hr>
+		       
+                  <div class="row-fluid">
+                     <div class="span3">
                         <img src="thumbs/photo_cherrychung.jpg" alt="Cherry Chung"/>
                      </div>
                      <div class="span9">
@@ -119,20 +133,6 @@
 			<p><i>Research Assistant</i></p>
                         <p>Cherry graduated from the Hong Kong Polytechnic University with an BA degree in Chinese and Bilingual Studies. She is currently studying Master of Speech Therapy in PolyU. Her research interests include pediatric speech-language disorders and sleep-language association.</p>
                         <p><b>Email: </b><a href="mailto:yeelok-cherry.chung@polyu.edu.hk">yeelok-cherry.chung@polyu.edu.hk</a></p>
-                     </div>
-                  </div>
-                  <hr>
-		       
-                  <div class="row-fluid">
-                     <div class="span3">
-                        <img src="thumbs/photo_adeel.jpeg" alt="Adeel Khan"/>
-                     </div>
-                     <div class="span9">
-                        <h4>Muhammad Adeel KHAN</h4>
-			<p><i>Research Assistant</i></p>
-                        <p>Adeel is a recent graduate of HKU, with a degree in "Learning Sciences and Applied Neuroscience." His research focus centers on EEG, HRV, stress, and reinforcement learning.</p>
-                        <p><b>Email: </b><a href="mailto:adeel.khan@polyu.edu.hk">adeel.khan@polyu.edu.hk</a></p>
-			<p><b><a href="https://scholar.google.com/citations?user=grvmXXYAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Muhammad-Khan-665">ResearchGate</a></b></p>
                      </div>
                   </div>
                   <hr>
