--- a/index.html
+++ b/index.html
@@ -46,6 +46,33 @@
                </div>
 	    </div>
          </div>
+
+	 <div class="row-fluid">
+            <div class="span12">
+               <div id="main-carousel" class="carousel slide">
+                  <div class="carousel-inner">
+                     <div class="item active">
+                        <img src="files/frontpage_members.jpg" class="carousel-image" alt="" style="width:100%; height: 220px;">                      
+                        <div class="carousel-caption">
+                           <h4>Welcome to the our Lab!</h4>
+                           <!-- images/microscope-crop1.JPG-->
+                           <p></p>
+                        </div>
+                     </div>
+                     <div class="item">
+                        <img src="files/frontpage_UBSN.png" class="carousel-image" alt="" style="width:100%; height: 220px;">
+                        <div class="carousel-caption">
+                           <h4>Our research at UBSN</h4>
+                           <p></p>
+                        </div>
+                     </div>
+                  </div>
+                  <a class="left carousel-control" href="#main-carousel" data-slide="prev">‹</a>
+                  <a class="right carousel-control" href="#main-carousel" data-slide="next">›</a>
+               </div>
+            </div>
+         </div>
+	      
          <hr>
          <div class="container-fluid">
             <div class="row-fluid marketing">
