--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                      </div>
 
 		     <div class="item">
-                        <img src="files/frontpage_YF.png" class="carousel-image" alt="" style="width:100%; height: 220px;">
+                        <img src="files/frontpage_YF.jpg" class="carousel-image" alt="" style="width:100%; height: 220px;">
                         <div class="carousel-caption">
                            <h4>Dr.Zhang at the Youth Forum on Language Neuroscience</h4>
                            <p></p>
