--- a/index.html
+++ b/index.html
@@ -60,19 +60,11 @@
                            <p></p>
                         </div>
                      </div>
-			  
-                     <div class="item">
-                        <img src="files/frontpage_UBSN.png" class="carousel-image" alt="" style="width:100%; height: 300px;">
-                        <div class="carousel-caption">
-                           <h4>Our research at UBSN</h4>
-                           <p></p>
-                        </div>
-                     </div>
 
 		     <div class="item">
                         <img src="files/frontpage_YF.jpg" class="carousel-image" alt="" style="width:100%; height: 300px;">
                         <div class="carousel-caption">
-                           <h4>Dr. Zhang at the Youth Forum on Language Neuroscience</h4>
+                           <h4>Dr. Zhang at the Youth Forum on Language Neuroscience, PolyU</h4>
                            <p></p>
                         </div>
                      </div>
