--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="container">
          <header class="jumbotron subhead" id="overview">
             <p class="lead"> The Hong Kong Polytechnic University </p>
-            <h1>Caicai Zhang's Lab</h1>
+            <h1>Neurocognition of Language, Music and Learning Lab</h1>
          </header>
          <div class="masthead">
             <div class="navbar">
