--- a/publications.html
+++ b/publications.html
@@ -26,7 +26,7 @@
       <div class="container">
          <header class="jumbotron subhead" id="overview">
             <p class="lead"> The Hong Kong Polytechnic University </p>
-            <h1>Caicai Zhang's Lab</h1>
+            <h2>Neurocognition of Language, Music and Learning Lab</h2>
          </header>
          <div class="masthead">
             <div class="navbar">
