--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="container">
          <header class="jumbotron subhead" id="overview">
             <p class="lead"> The Hong Kong Polytechnic University </p>
-            <h2>Neurocognition of Language, Music and Learning Lab</h2>
+            <h3>Neurocognition of Language, Music and Learning (NeuroLML) Lab</h3>
          </header>
          <div class="masthead">
             <div class="navbar">
