--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Caicai Zhang's Lab - Home</title>
+      <title>NeuroLML Lab - Home</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Caicai Zhang Lab">
       <meta name="author" content="">
@@ -27,8 +27,8 @@
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
-            <p class="lead"> The Hong Kong Polytechnic University </p>
-            <h2>Neurocognition of Language, Music and Learning (NeuroLML) Lab</h2>
+            <p class="lead"> NeuroLML @ The Hong Kong Polytechnic University </p>
+            <h2>Neurocognition of Language, Music and Learning Lab</h2>
          </header>
          <div class="masthead">
             <div class="navbar">
