--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                <div class="span12">
 		  <h4>WELCOME!</h4> 
                   <p>
-                     Our lab broadly concentrates on how language is processed and represented in the human brain, and how it interacts with other cognitive domains such as music and memory. At a more specific level, our research focuses on:
+                     Led by Dr. Caicai Zhang, the NeuroLML lab broadly concentrates on how language is processed and represented in the human brain, and how it interacts with other cognitive domains such as music and memory. At a more specific level, our research focuses on:
                   </p>
                      <ol>
                         <li><b>Language, music and brain.</b> We investigate this theme from the perspective of how congenital amusia (commonly known as tone deafness), an innate musical pitch disorder, affects speech processing from behavioral to neural levels.</li> 
