--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
-            <p class="lead"> The Hong Kong Polytechnic University </p>
+            <p class="lead">NeuroLML @ The Hong Kong Polytechnic University </p>
             <h2>Neurocognition of Language, Music and Learning Lab</h2>
          </header>
          <div class="masthead">
