--- a/media.html
+++ b/media.html
@@ -25,8 +25,8 @@
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
-            <p class="lead"> The Hong Kong Polytechnic University </p>
-            <h1>Caicai Zhang's Lab</h1>
+            <p class="lead">NeuroLML @ The Hong Kong Polytechnic University </p>
+            <h2>Neurocognition of Language, Music and Learning Lab</h2>
          </header>
          <div class="masthead">
             <div class="navbar">
