--- a/grants.html
+++ b/grants.html
@@ -55,7 +55,7 @@
 
 <h5>The effects of auditory cueing during sleep on generalized phonetic learning: The case of non-native lexical tone learning</h5>
 	<ol>
-<li>Source: General Research Fund (15601024), Research Grants Council, Hong Kong</li>
+<li>Source: General Research Fund (No. 15601024), Research Grants Council, Hong Kong</li>
 <li>Amount: HK$860,380</li>
 <li>Duration: Jan 2025 – Dec 2027</li>
 <li>PI: Caicai Zhang</li>
@@ -64,7 +64,7 @@
 		       
 <h5>Pitch-based and Rhythm-based Music Training Programs for Improving Phonological and Reading Abilities in Cantonese ESL Kindergarteners: A Randomized Controlled Trial</h5>
 	<ol>
-<li>Source: General Research Fund (17600124), Research Grants Council, Hong Kong</li>
+<li>Source: General Research Fund (No. 17600124), Research Grants Council, Hong Kong</li>
 <li>Amount: HK$767,085</li>
 <li>Duration: 2025 – 2027</li>
 <li>PI: Tsun Man William Choi (Co-I: Caicai Zhang)</li>
@@ -91,7 +91,7 @@
 
 <h5>Is the mismatch negativity really sensitive to abstract linguistic representations? </h5>
 	<ol>
-<li>Source: General Research Fund (15605620), Research Grants Council, Hong Kong</li>
+<li>Source: General Research Fund (No. 15605620), Research Grants Council, Hong Kong</li>
 <li>Amount: HK$748,000</li>
 <li>Duration: Jan 2021 – Dec 2023</li>
 <li>PI: Caicai Zhang (former PI: Stephen Politzer-Ahles)</li>	
@@ -109,7 +109,7 @@
 
 <h5>Conversational Brains (COBRA)</h5>
 	<ol>
-<li>Source: Horizon 2020 European Commission (P0032309)</li>
+<li>Source: Horizon 2020 European Commission (No. P0032309)</li>
 <li>Amount: HK$509,670</li>
 <li>Duration: 2020 – 2024</li>
 <li>PI: Chu-Ren Huang (Co-I: Caicai Zhang)</li>	
@@ -127,7 +127,7 @@
 
 <h5>The Effect of Overnight Consolidation on the Generalization Across Talkers: A Case Study on Cantonese Tones</h5>
 	<ol>
-<li>Source: Language Learning Early Career Research Grant (P0014062), University of Utah</li>
+<li>Source: Language Learning Early Career Research Grant (No. P0014062), University of Utah</li>
 <li>Amount: US$78,441</li>
 <li>Duration: May 2019 – Aug 2020</li>
 <li>PI: Zhen Qin (Co-I: Caicai Zhang)</li>	
@@ -189,7 +189,7 @@
 
 <h5>Effects of congenital amusia on afflicted individuals’ statistical learning of music and speech</h5>
 	<ol>	       
-<li>Source: Departmental General Research Fund (A0052593), The Hong Kong Polytechnic University</li>
+<li>Source: Departmental General Research Fund (No. A0052593), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$400,000</li>
 <li>Duration: Sep 2024 – Dec 2025</li>
 <li>PI: Caicai Zhang (Co-I: Jiaqiang Zhu)</li>
@@ -198,7 +198,7 @@
 		       
 <h5>An investigation of the functional neuroanatomy of lexical tone encoding in overt Mandarin word production with functional near-infrared spectroscopy (fNIRS)</h5>
 	<ol>	       
-<li>Source: Departmental General Research Fund (P0046373), The Hong Kong Polytechnic University</li>
+<li>Source: Departmental General Research Fund (No. P0046373), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$250,000</li>
 <li>Duration: Sep 2023 – Aug 2025</li>
 <li>PI: Caicai Zhang</li>
@@ -207,7 +207,7 @@
 
 <h5>Emotion Recognition Training based on an integration of Robot and AR technology in Children with Autism Spectrum Disorder</h5>
 	<ol>
-<li>Source: Inter-Faculty Collaboration Scheme for FH, FHSS and FENG (P0043034), The Hong Kong Polytechnic University</li>
+<li>Source: Inter-Faculty Collaboration Scheme for FH, FHSS and FENG (No. P0043034), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$500,000</li>
 <li>Duration: Jan 2023 – Dec 2024</li>
 <li>PI: Si Chen (Co-I: Caicai Zhang)</li>
@@ -216,7 +216,7 @@
 
 <h5>The Statistical Learning Mechanism across Music and Speech in Congenital Amusics</h5>
 	<ol>
-<li>Source: Postdoc Fellowship (P0040849), The Hong Kong Polytechnic University</li>
+<li>Source: Postdoc Fellowship (No. P0040849), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$730,800</li>
 <li>Duration: 2022 – 2024</li>
 <li>PI: Caicai Zhang</li>
@@ -243,7 +243,7 @@
 
 <h5>The neurocognition of typical and atypical language development: Towards developing early biomarkers</h5>
 	<ol>
-<li>Source: Project of Strategic Importance (P0032004), The Hong Kong Polytechnic University</li>
+<li>Source: Project of Strategic Importance (No. P0032004), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$2,000,000</li>
 <li>Duration: Sep 2020 – Aug 2023</li>
 <li>PI: Caicai Zhang</li>
@@ -252,7 +252,7 @@
 
 <h5>Online Processing of Contextual Tonal Variants during Speech Production in Teochew (Chaozhou Min)</h5>
 	<ol>
-<li>Source: Postdoc Fellowship (P0033654), The Hong Kong Polytechnic University</li>
+<li>Source: Postdoc Fellowship (No. P0033654), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$698,040</li>
 <li>Duration: 2020 – 2022</li>
 <li>PI: Caicai Zhang</li>
@@ -261,7 +261,7 @@
 
 <h5>Categorical perception of the speech sounds in adults who stutter</h5>
 	<ol>
-<li>Source: Departmental General Research Funds (P0014009), The Hong Kong Polytechnic University</li>
+<li>Source: Departmental General Research Funds (No. P0014009), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$100,000</li>
 <li>Duration: May 2019 – Apr 2020</li>
 <li>PI: Mehdi Bakhtiar (Co-I: Caicai Zhang)</li>
@@ -270,7 +270,7 @@
 
 <h5>Impact of acquiring Jyutping on speech processing in Cantonese readers: A combined behavioral and event-related study</h5>
 	<ol>
-<li>Source: Departmental General Research Funds (International Collaboration) (P0008738), The Hong Kong Polytechnic University</li>
+<li>Source: Departmental General Research Funds (International Collaboration) (No. P0008738), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$199,985</li>
 <li>Duration: Sep 2018 – Nov 2020</li>
 <li>PI: Caicai Zhang</li>
@@ -279,7 +279,7 @@
 
 <h5>A pilot study on the neural mechanisms of the encoding of tone sandhi with high vs. low productivity in Chinese dialects</h5>
 	<ol>
-<li>Source: Fund for GRF Project Rated 3.5 (CRG) (P0009687), The Hong Kong Polytechnic University</li>
+<li>Source: Fund for GRF Project Rated 3.5 (CRG) (No. P0009687), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$105,000</li>
 <li>Duration: Jan 2018 – Apr 2020</li>
 <li>PI: Caicai Zhang</li>
@@ -288,7 +288,7 @@
 
 <h5>Correlation of congenital amusia and tone merger in Hong Kong Cantonese: An investigation from the individual variation perspective</h5>
 	<ol>
-<li>Source: Departmental General Research Funds (Cross-institutional collaboration) (P0001867), The Hong Kong Polytechnic University</li>
+<li>Source: Departmental General Research Funds (Cross-institutional collaboration) (No. P0001867), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$122,000</li>
 <li>Duration: 2017 – 2018</li>
 <li>PI: Caicai Zhang</li>
@@ -297,7 +297,7 @@
 
 <h5>Lexical tone and musical tone: Cross-domain influence of musical disorder on the neural processing of lexical tone</h5>
 	<ol>
-<li>Source: University’s Start-up Fund for New Recruits (P0000424), The Hong Kong Polytechnic University</li>
+<li>Source: University’s Start-up Fund for New Recruits (No. P0000424), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$499,995</li>
 <li>Duration: 2016 – 2018</li>
 <li>PI: Caicai Zhang</li>
@@ -306,7 +306,7 @@
 
 <h5>Statistical modeling of the phonologization of phonetic effects: A cross-linguistic study</h5>
 	<ol>
-<li>Source: Dean’s Reserve fund for International Research Collaboration (P0009715), The Hong Kong Polytechnic University</li>
+<li>Source: Dean’s Reserve fund for International Research Collaboration (No. P0009715), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$500,000</li>
 <li>Duration: Apr 2016 – Dec 2018</li>
 <li>PI: Si Chen (Co-I: Caicai Zhang)</li>
