--- a/grants.html
+++ b/grants.html
@@ -73,7 +73,7 @@
 
 <h5>不同睡眠阶段记忆巩固的认知神经机制研究</h5>
 	<ol>
-<li>Source: Natural Science Foundation (General Program) [省自然科学基金项目面上项目] (No. 2024A1515012667), Guangdong Basic and Applied Basic Research Foundation [广东省基础与应用基础研究基金委员会]</li>
+<li>Source: Natural Science Foundation (General Program) [省自然科学基金面上项目] (No. 2024A1515012667), Guangdong Basic and Applied Basic Research Foundation [广东省基础与应用基础研究基金委员会]</li>
 <li>Amount: ¥150,000</li>
 <li>Duration: Jan 2024 – Dec 2026</li>
 <li>PI: Jing Liu (Co-I: Caicai Zhang)</li>
