--- a/grants.html
+++ b/grants.html
@@ -71,7 +71,7 @@
 	</ol>
 <br>
 
-<h5>不同睡眠阶段记忆巩固的认知神经机制研究</h5>
+<h5>The neurocognitive mechanisms of memory consolidation during different sleep stages [不同睡眠阶段记忆巩固的认知神经机制研究]</h5>
 	<ol>
 <li>Source: Natural Science Foundation (General Program) [省自然科学基金面上项目] (No. 2024A1515012667), Guangdong Basic and Applied Basic Research Foundation [广东省基础与应用基础研究基金委员会]</li>
 <li>Amount: ¥150,000</li>
