--- a/people.html
+++ b/people.html
@@ -246,7 +246,7 @@
                      <div class="span9">
                         <h4>Ruofan WU</h4>
 			<p><i>PhD student</i></p>
-                        <p>Ruofan holds a BA in Linguistics (CityU) and an MSc in Psychology (University of Edinburgh). Her current research interest is in language and cognitive abilities in neurotypical people and neurodevelopmental conditions such as Autism.</p>
+                        <p>Ruofan holds a BA in Linguistics (CityU) and an MSc in Psychology (University of Edinburgh). Her current research interest is in language and cognitive abilities in neurotypical people and neurodevelopmental conditions such as Autism (Ruofan has a clinical certification of ADOS-2).</p>
                         <p><b>Email: </b><a href="mailto:ruofan-ann.wu@connect.polyu.hk">ruofan-ann.wu@connect.polyu.hk</a></p>
 			<p><b><a href="https://www.researchgate.net/profile/Ruofan-Wu-2">ResearchGate</a></b></p>
                      </div>
