--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
-            <p class="lead"> NeuroLML @ The Hong Kong Polytechnic University </p>
-            <h2>Neurocognition of Language, Music and Learning Lab</h2>
+            <p class="lead"> Speech, Learning and the Brain Lab </p>
+            <h2>言語，學習及大腦實驗室</h2>
          </header>
          <div class="masthead">
             <div class="navbar">
@@ -36,11 +36,11 @@
                   <div class="container">
                      <ul class="nav">
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="people.html">People</a></li>
+                        <li><a href="people.html">Members</a></li>
                         <li><a href="publications.html">Publications</a></li>
-                        <li><a href="grants.html">Grants</a></li>
-			<li><a href="media.html">Media</a></li>
-                        <li><a href="contact.html">Join Experiment</a></li>
+                        <li><a href="grants.html">Facilities</a></li>
+			<li><a href="media.html">Collaboration and Outreach</a></li>
+                        <!--<li><a href="contact.html">Join Experiment</a></li>-->
                      </ul>
                   </div>
                </div>
