--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         <li>01/09/2023 Welcome to our new member Kangdi LIU (RPG) and Susu LAI (RA)! And farewell to our team alum Ruofan.</li>
         <li>07/08/2023 Our research team have two papers (ID: 157 and 499) presented at the <a href="https://www.icphs2023.org/">ICPhS 2023 in Prague</a>. Please stop by!</li>
         <li>01/07/2023 Our project about tone learning and memory will be funded by <a href="https://www.ugc.edu.hk/eng/rgc/funding_opport/ecs/index.html">Early Career Scheme, Research Grants Council (Hong Kong)</a>.</li>
-        <li><a href="https://huma.hkust.edu.hk/news/mphil-student-jeremy-yinto-chui-was-awarded-prestigious-hk-phd-fellowship">23/05/2023 Jeremy and Ruofan were awarded the prestigious Hong Kong PhD Fellowship for PhD studies. Congrats!</a></li>
-        <li><a href="https://slablab.weebly.com/">09/05/2023 Yuqi's paper was accepted for oral presentation to the FoCaL-6 in Hong Kong.</a></li>
-        <li><a href="https://site.hanyang.ac.kr/web/hisphoncog">24/03/2023 Our paper was accepted to the HISPhonCog 2023 in Seoul, Korea.</a></li>
+        <li>23/05/2023 <a href="https://huma.hkust.edu.hk/news/mphil-student-jeremy-yinto-chui-was-awarded-prestigious-hk-phd-fellowship">Jeremy</a> and Ruofan were awarded the prestigious Hong Kong PhD Fellowship for PhD studies. Congrats!</li>
+        <li>09/05/2023 Yuqi's paper was accepted for oral presentation to the <a href="https://slablab.weebly.com/">FoCaL-6</a> in Hong Kong.</li>
+        <li>24/03/2023 Our paper was accepted to the <a href="https://site.hanyang.ac.kr/web/hisphoncog">HISPhonCog</a> 2023 in Seoul, Korea.</a></li>
         <li><a href="https://hrmsxprod.psft.ust.hk:8044/psp/hrmsxprod/EMPLOYEE/HRMS/c/HRS_HRAM.HRS_CE.GBL?Page=HRS_CE_JOB_DTL&Action=A&JobOpeningId=8334&SiteId=1000&PostingSeq=1">01/02/2023 We are looking for a Research Assistant/Post-doctoral Fellow. Please apply here.</a> The deadline is 28 Feb, 2023.</li>
         <li>01/01/2023 Our eye-tracking project collaborating with <a href="https://fah.um.edu.mo/jingwei-zhang/">Dr. Jingwei Zhang</a> will be funded by the Multiple-Year Research Grant, Macau.</li>
         <li>15/10/2022 Our team member Jeremy Chui (RPG) received Dr. Charles Chan Postgraduate Scholarship 2022/23.</li>
