--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
         <li>11/06/2024 Our study “<a href="https://pubs.asha.org/doi/10.1044/2024_JSLHR-23-00711">Distributional learning and overnight consolidation of non-native tonal contrasts by tonal language speakers</a>” is published in Journal of Speech, Language, and Hearing Research.</li>
         <li>06/06/2024 Our study “<a href="https://www.degruyter.com/document/doi/10.1515/lingvan-2022-0158/html">The role of coarticulatory tonal information in Cantonese spoken word recognition: an eye-tracking study</a>” is published in Linguistics Vanguard.</li>				
         <li>21/05/2024 Our team member Kangdi LIU was awarded the 2023-2024 Postgraduate Research Grant for the Division of Humanities.</li>
-        <li>23/04/2024 Dr. Quentin QIN was offered an Early Career Travel Award for the 186th <a href="https://acousticalsociety.org/ottawa/">ASA</a> Meeting in Canada.</li>
+        <li>23/04/2024 Dr. Quentin QIN was offered an Early Career Travel Award for the 186th <a href="https://acousticalsociety.org/ottawa/">ASA Meeting in Canada</a>.</li>
         <li>12/04/2024 Our team member Yuqi WANG was awarded the prestigious <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship</a>. Congrats!</li>			
         <li>10/04/2024 Our new article about L2/L3 tone perception was published in <a href="https://journals.sagepub.com/doi/10.1177/02676583241244604">Second Language Research</a>.</li>
         <li>19/03/2024 An interview featuring our sleep and language learning research was published in <a href="https://dw-media.tkww.hk/epaper/wwp/20240319/a07-0319.pdf">Hong Kong Wen Wei Po</a>.</li>
-        <li>01/03/2024 Three studies led by students were accepted to the <a href="https://acousticalsociety.org/ottawa/">ASA meeting (Ottawa)</a> and the <a href="https://www.polyu.edu.hk/en/fh/isls/">ASA (HK)</a>.</li>
+        <li>01/03/2024 Three studies led by students were accepted to the <a href="https://acousticalsociety.org/ottawa/">ASA (Ottawa)</a> and the <a href="https://www.polyu.edu.hk/en/fh/isls/">ASA (HK)</a> meetings.</li>
         <li>18/11/2023 Keep an eye on our team's work presented at <a href="https://tai2023.sg/">TAI 2023 in Singapore</a> and <a href="https://ling.cuhk.edu.hk/amlap.asia/">AMLap Asia 2023 in Hong Kong</a>.</li>
         <li>03/10/2023 Our team member Yuqi WANG received Dr. Charles Chan Postgraduate Scholarship 2023/24 for her academic achievement.</li>
         <li>01/09/2023 Welcome to our new member Kangdi LIU (RPG) and Susu LAI (RA)! And farewell to our team alum Ruofan.</li>
