--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>NeuroLML Lab - Home</title>
+    <title>SLaB Lab - Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="SLaB Lab">
     <meta name="author" content="">
@@ -38,8 +38,7 @@
 <body>
     <div class="container">
         <header class="jumbotron subhead" id="overview">
-            <p class="lead lab-title">Speech, Learning and the Brain Lab</p>
-            <h2 class="lab-subtitle">言語，學習及大腦實驗室</h2>
+		<img alt="" src="files/title.jpg">
         </header>
         
         <div class="masthead">
