--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <title>NeuroLML Lab - Home</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Caicai Zhang Lab">
+      <meta name="description" content="SLaB Lab">
       <meta name="author" content="">
       <!-- Le styles -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
-		<img alt="" src="files/logo2.jpg">
+		<img alt="" src="files/title2.jpg">
          </header>
         
         <div class="masthead">
