--- a/index.html
+++ b/index.html
@@ -51,14 +51,13 @@
             <div class="span12">
                <div id="main-carousel" class="carousel slide">
                   <div class="carousel-inner">
-			  
-                     <div class="item active">
-                        <img src="files/Photo_Homepage.jpg" class="carousel-image" alt="" style="width:100%; height: 300px;">                      
-                        <div class="carousel-caption">
-                           <h4>Welcome to our Lab!</h4>
-                           <!-- images/microscope-crop1.JPG-->
-                           <p></p>
-                        </div>
+			<div class="item active">
+			    <img src="files/Photo_Homepage.jpg" class="carousel-image" alt="" style="width:auto; height:300px; max-width: 100%;">                      
+			    <div class="carousel-caption">
+			        <h4>Welcome to our Lab!</h4>
+			        <p></p>
+			    </div>
+			</div>
                      </div>
 
 		     <div class="item">
