--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    </head>
    <body>
       <div class="container">
-         <header class="jumbotron subhead" id="overview">
+         <header  id="overview">
 		<img alt="" src="files/title2.jpg">
          </header>
         
