--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <body>
       <div class="container">
          <header  id="overview">
-		<img alt="" src="files/title2.jpg">
+		<img alt="" src="files/title2.png">
          </header>
         
         <div class="masthead">
