--- a/index.html
+++ b/index.html
@@ -61,20 +61,9 @@
 
         <div class="row-fluid">
             <div class="span12">
-               <div id="main-carousel" class="carousel slide">
-                  <div class="carousel-inner">
-                     <div class="item active">
-                        <img src="files/Photo_Homepage.jpg" class="carousel-image responsive-img" alt="">                      
-                        <div class="carousel-caption">
-                           <h4>Welcome to our Lab!</h4>
-                           <p></p>
-                        </div>
-                     </div>
-                     <!-- Add additional carousel items if needed -->
-                  </div>
-                  <!-- Carousel controls -->
-                  <a class="left carousel-control" href="#main-carousel" data-slide="prev">‹</a>
-                  <a class="right carousel-control" href="#main-carousel" data-slide="next">›</a>
+               <div class="img-container">
+                  <img src="files/Photo_Homepage.jpg" class="responsive-img" alt="">
+                  <img src="files/Your_Second_Image.jpg" class="responsive-img" alt="">
                </div>
             </div>
          </div>
@@ -99,7 +88,36 @@
                      <li><b>We are also looking for subjects (currently mainly <span style="font-weight:bold; color:#ff0000;">Cantonese-speaking children</span>) to participate in our ongoing experiments (see below self-explanatory posters and <a href="contact.html">here</a> for more details). Feel free to spread the info and contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a> for any questions.</b></li>
                   </ol>
 
-                  <!-- Images side by side -->
+                  <h4>News and Events</h4>
+                  <div style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 10px;">
+                      <ol>
+                          <li>05/08/2024 Jiayu LIANG, who graduated from Shandong University, joined our lab as RA!</li>				
+                          <li>02/08/2024 Jeremy presented our Aging project at the <a href="https://goldenage.foundation/en/gaes2024">9th Golden Age Expo and Summit (GAES)</a>.</li>
+                          <li>31/07/2024 Yuqi successfully defended her MPhil thesis titled "Cantonese Tone Processing in the Forced-attention Dichotic Listening Task by Cantonese-dominant Bilingual Speakers”.</li>
+                          <li>11/06/2024 Our study “<a href="https://pubs.asha.org/doi/10.1044/2024_JSLHR-23-00711">Distributional learning and overnight consolidation of non-native tonal contrasts by tonal language speakers</a>” is published in Journal of Speech, Language, and Hearing Research.</li>
+                          <li>06/06/2024 Our study “<a href="https://www.degruyter.com/document/doi/10.1515/lingvan-2022-0158/html">The role of coarticulatory tonal information in Cantonese spoken word recognition: an eye-tracking study</a>” is published in Linguistics Vanguard.</li>				
+                          <li>21/05/2024 Our team member Kangdi LIU was awarded the 2023-2024 Postgraduate Research Grant for the Division of Humanities.</li>
+                          <li>23/04/2024 Dr. Quentin QIN was offered an Early Career Travel Award for the 186th <a href="https://acousticalsociety.org/ottawa/">ASA Meeting in Canada</a>.</li>
+                          <li>12/04/2024 Our team member Yuqi WANG was awarded the prestigious <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship</a>. Congrats!</li>			
+                          <li>10/04/2024 Our new article about L2/L3 tone perception was published in <a href="https://journals.sagepub.com/doi/10.1177/02676583241244604">Second Language Research</a>.</li>
+                          <li>19/03/2024 An interview featuring our sleep and language learning research was published in <a href="https://dw-media.tkww.hk/epaper/wwp/20240319/a07-0319.pdf">Hong Kong Wen Wei Po</a>.</li>
+                          <li>01/03/2024 Three studies led by students were accepted to the <a href="https://acousticalsociety.org/ottawa/">ASA (Ottawa)</a> and the <a href="https://www.polyu.edu.hk/en/fh/isls/">ASA (HK)</a> meetings.</li>
+                          <li>18/11/2023 Keep an eye on our team's work presented at <a href="https://tai2023.sg/">TAI 2023 in Singapore</a> and <a href="https://ling.cuhk.edu.hk/amlap.asia/">AMLap Asia 2023 in Hong Kong</a>.</li>
+                          <li>03/10/2023 Our team member Yuqi WANG received Dr. Charles Chan Postgraduate Scholarship 2023/24 for her academic achievement.</li>
+                          <li>01/09/2023 Welcome to our new member Kangdi LIU (RPG) and Susu LAI (RA)! And farewell to our team alum Ruofan.</li>
+                          <li>07/08/2023 Our research team have two papers (ID: 157 and 499) presented at the <a href="https://www.icphs2023.org/">ICPhS 2023 in Prague</a>. Please stop by!</li>
+                          <li>01/07/2023 Our project about tone learning and memory will be funded by <a href="https://www.ugc.edu.hk/eng/rgc/funding_opport/ecs/index.html">Early Career Scheme, Research Grants Council (Hong Kong)</a>.</li>
+                          <li>23/05/2023 <a href="https://huma.hkust.edu.hk/news/mphil-student-jeremy-yinto-chui-was-awarded-prestigious-hk-phd-fellowship">Jeremy</a> and Ruofan were awarded the prestigious Hong Kong PhD Fellowship for PhD studies. Congrats!</li>
+                          <li>09/05/2023 Yuqi's paper was accepted for oral presentation to the <a href="https://slablab.weebly.com/">FoCaL-6</a> in Hong Kong.</li>
+                          <li>24/03/2023 Our paper was accepted to the <a href="https://site.hanyang.ac.kr/web/hisphoncog">HISPhonCog</a> 2023 in Seoul, Korea.</a></li>
+                          <li><a href="https://hrmsxprod.psft.ust.hk:8044/psp/hrmsxprod/EMPLOYEE/HRMS/c/HRS_HRAM.HRS_CE.GBL?Page=HRS_CE_JOB_DTL&Action=A&JobOpeningId=8334&SiteId=1000&PostingSeq=1">01/02/2023 We are looking for a Research Assistant/Post-doctoral Fellow. Please apply here.</a> The deadline is 28 Feb, 2023.</li>
+                          <li>01/01/2023 Our eye-tracking project collaborating with <a href="https://fah.um.edu.mo/jingwei-zhang/">Dr. Jingwei Zhang</a> will be funded by the Multiple-Year Research Grant, Macau.</li>
+                          <li>15/10/2022 Our team member Jeremy Chui (RPG) received Dr. Charles Chan Postgraduate Scholarship 2022/23.</li>
+                          <li>01/10/2022 Our project about sleep and mental health was funded by <a href="https://ssc.hkust.edu.hk/projects/empowering-our-community-for-positive-change/staying-smart-by-taking-a-nap">Sustainable Smart Campus as a Living Lab Project.</a></li>
+                          <li>01/09/2022 Our project about ageing and language learning was funded by HKUST <a href="https://iems.ust.hk/updates/iems-updates/2022/announcing-iems-grants-2022">IEMS Research Grants.</a></li>
+                          <li>01/09/2022 Welcome to two new members Ruofan WU (RA) and Yuqi WANG (RPG)! And farewell to our team alum Rui Jin.</li>
+                      </ol>
+                  </div>
                   <div class="img-container">
                       <img src="files/poster_240313_MOST.png" alt="HMRF" class="responsive-img" style='border:1.5px solid #000000' />
                       <img src="files/poster_240112_HMRF.jpg" alt="MOST" class="responsive-img" style='border:1.5px solid #000000' />
@@ -117,6 +135,5 @@
       <!-- Javascript files -->
       <script src="js/jquery-1.9.1.min.js"></script>
       <script src="js/bootstrap.min.js"></script>
-      <script> $('#main-carousel').carousel(); </script>
    </body>
 </html>
