--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="span12">
                <div class="img-container">
                   <img src="files/Photo_Homepage.jpg" class="responsive-img" alt="">
-                  <img src="files/Your_Second_Image.jpg" class="responsive-img" alt="">
+                  <img src="files/slab_letter.png" class="responsive-img" alt="">
                </div>
             </div>
          </div>
@@ -75,19 +75,6 @@
                   <p>
                      We are based in the Division of Humanities at Hong Kong University of Science and Technology.
                   </p>
-                  <h4>News and Events</h4>
-                  <div style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 10px;">
-                      <ol>
-                          <!-- News items go here -->
-                      </ol>
-                  </div>
-
-                  <h4>JOIN US!</h4>
-                  <ol>
-                     <li><b>We are looking for passionate researchers (RA/PhD/PostDoc) to join our team. Please see <a href="https://jobs.polyu.edu.hk/job_detail.php?job=240531003">here</a> for more details. You can also email Dr. Zhang with your CV at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</b></li>
-                     <li><b>We are also looking for subjects (currently mainly <span style="font-weight:bold; color:#ff0000;">Cantonese-speaking children</span>) to participate in our ongoing experiments (see below self-explanatory posters and <a href="contact.html">here</a> for more details). Feel free to spread the info and contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a> for any questions.</b></li>
-                  </ol>
-
                   <h4>News and Events</h4>
                   <div style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 10px;">
                       <ol>
@@ -117,7 +104,16 @@
                           <li>01/09/2022 Our project about ageing and language learning was funded by HKUST <a href="https://iems.ust.hk/updates/iems-updates/2022/announcing-iems-grants-2022">IEMS Research Grants.</a></li>
                           <li>01/09/2022 Welcome to two new members Ruofan WU (RA) and Yuqi WANG (RPG)! And farewell to our team alum Rui Jin.</li>
                       </ol>
+
                   </div>
+
+                  <h4>JOIN US!</h4>
+                  <ol>
+                     <li><b>We are looking for passionate researchers (RA/PhD/PostDoc) to join our team. Please see <a href="https://jobs.polyu.edu.hk/job_detail.php?job=240531003">here</a> for more details. You can also email Dr. Zhang with your CV at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</b></li>
+                     <li><b>We are also looking for subjects (currently mainly <span style="font-weight:bold; color:#ff0000;">Cantonese-speaking children</span>) to participate in our ongoing experiments (see below self-explanatory posters and <a href="contact.html">here</a> for more details). Feel free to spread the info and contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a> for any questions.</b></li>
+                  </ol>
+
+                  
                   <div class="img-container">
                       <img src="files/poster_240313_MOST.png" alt="HMRF" class="responsive-img" style='border:1.5px solid #000000' />
                       <img src="files/poster_240112_HMRF.jpg" alt="MOST" class="responsive-img" style='border:1.5px solid #000000' />
