--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    <body>
       <div class="container">
          <header id="overview">
-            <img alt="" src="files/title2.png" class="responsive-img">
+            <img alt="" src="files/title2.png">
          </header>
         
          <div class="masthead">
