--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
             margin-bottom: 20px; /* Increase spacing below section headings */
          }
          p {
-            font-size: 16px;
+            font-size: 18px;
             margin-bottom: 30px; /* Add spacing below paragraphs */
+            line-height: 1.6; /* Adjust line spacing within paragraphs */
          }
          .section {
-            margin-bottom: 50px; /* Add spacing between sections */
+            margin-bottom: 30px; /* Add spacing between sections */
          }
       </style>
    </head>
@@ -112,7 +113,7 @@
                           <li>23/05/2023 <a href="https://huma.hkust.edu.hk/news/mphil-student-jeremy-yinto-chui-was-awarded-prestigious-hk-phd-fellowship">Jeremy</a> and Ruofan were awarded the prestigious Hong Kong PhD Fellowship for PhD studies. Congrats!</li>
                           <li>09/05/2023 Yuqi's paper was accepted for oral presentation to the <a href="https://slablab.weebly.com/">FoCaL-6</a> in Hong Kong.</li>
                           <li>24/03/2023 Our paper was accepted to the <a href="https://site.hanyang.ac.kr/web/hisphoncog">HISPhonCog</a> 2023 in Seoul, Korea.</a></li>
-                          <li><a href="https://hrmsxprod.psft.ust.hk:8044/psp/hrmsxprod/EMPLOYEE/HRMS/c/HRS_HRAM.HRS_CE.GBL?Page=HRS_CE_JOB_DTL&Action=A&JobOpeningId=8334&SiteId=1000&PostingSeq=1">01/02/2023 We are looking for a Research Assistant/Post-doctoral Fellow. Please apply here.</a> The deadline is 28 Feb, 2023.</li>
+                          <li>01/02/2023 We are looking for a Research Assistant/Post-doctoral Fellow. Please apply <a href="https://hrmsxprod.psft.ust.hk:8044/psp/hrmsxprod/EMPLOYEE/HRMS/c/HRS_HRAM.HRS_CE.GBL?Page=HRS_CE_JOB_DTL&Action=A&JobOpeningId=8334&SiteId=1000&PostingSeq=1">here.</a> The deadline is 28 Feb, 2023.</li>
                           <li>01/01/2023 Our eye-tracking project collaborating with <a href="https://fah.um.edu.mo/jingwei-zhang/">Dr. Jingwei Zhang</a> will be funded by the Multiple-Year Research Grant, Macau.</li>
                           <li>15/10/2022 Our team member Jeremy Chui (RPG) received Dr. Charles Chan Postgraduate Scholarship 2022/23.</li>
                           <li>01/10/2022 Our project about sleep and mental health was funded by <a href="https://ssc.hkust.edu.hk/projects/empowering-our-community-for-positive-change/staying-smart-by-taking-a-nap">Sustainable Smart Campus as a Living Lab Project.</a></li>
