--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
             line-height: 1.6; /* Adjust line spacing within paragraphs */
          }
          .section {
-            margin-bottom: 20px; /* Add spacing between sections */
+            margin-bottom: 40px; /* Add spacing between sections */
+            text-align: left; /* Left align text in all sections */
+         }
+         .section h4 {
+            margin-left: 0; /* Ensure headings align to the left */
+         }
+         .contact-section {
+            padding-top: 20px;
+            border-top: 1px solid #ccc;
          }
       </style>
    </head>
@@ -124,22 +132,37 @@
                </div>
 
                <div class="span12 section">
-                  <h4>JOIN US!</h4>
+                  <h4>We are interested in...</h4>
                   <ol>
-                     <li><b>We are looking for passionate researchers (RA/PhD/PostDoc) to join our team. Please see <a href="https://jobs.polyu.edu.hk/job_detail.php?job=240531003">here</a> for more details. You can also email Dr. Zhang with your CV at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</b></li>
-                     <li><b>We are also looking for subjects (currently mainly <span style="font-weight:bold; color:#ff0000;">Cantonese-speaking children</span>) to participate in our ongoing experiments (see below self-explanatory posters and <a href="contact.html">here</a> for more details). Feel free to spread the info and contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a> for any questions.</b></li>
+                     <li><b>Second-language learning of speech prosody </b></li>
+                     <li><b>Sleep-dependent consolidation of lexical tones</b></li>
+                     <li><b>Aging, cognitive, and language learning</b></li>
                   </ol>
+
+
 
                   <div class="img-container">
                       <img src="files/poster_240313_MOST.png" alt="HMRF" class="responsive-img" style='border:1.5px solid #000000' />
                       <img src="files/poster_240112_HMRF.jpg" alt="MOST" class="responsive-img" style='border:1.5px solid #000000' />
                   </div>
                </div>
+
+               <div class="span12 section contact-section">
+                  <h4>Contact us!</h4>
+                  <p>
+                     ​Email: <a href="mailto:qinlabhkust@gmail.com">qinlabhkust@gmail.com</a><br>
+                     Location: Room G005,
+                     Cheng Yu Tung Building,
+                     The Hong Kong University of Science and Technology,
+                     Clear Water Bay, Kowloon, Hong Kong
+                  </p>
+               </div>
             </div>
          </div>	    
       </div>
       <footer id="footer">
          <div class="container-fluid">
+            <p>&copy; 2024 SLaB Lab. All rights reserved.</p>
          </div>
       </footer>
 
@@ -148,3 +171,16 @@
       <script src="js/bootstrap.min.js"></script>
    </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
