--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
                   <h4>Contact us!</h4>
                   <p>
                      ​Email: <a href="mailto:qinlabhkust@gmail.com">qinlabhkust@gmail.com</a><br>
-                     Location: Room G005,
-                     Cheng Yu Tung Building,
-                     The Hong Kong University of Science and Technology,
-                     Clear Water Bay, Kowloon, Hong Kong
+                     Location: Room G005,</a><br>
+                     Cheng Yu Tung Building,</a><br>
+                     The Hong Kong University of Science and Technology,</a><br>
+                     Clear Water Bay, Kowloon, Hong Kong</a><br>
                   </p>
                </div>
             </div>
