--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
             list-style-type: disc;
             margin-top: 1em;
             margin-bottom: 1em;
-            margin-left: 0;
-            margin-right: 0;
             padding-left: 40px;
             background-color: white;
          }
@@ -48,6 +46,7 @@
          .section {
             margin-bottom: 40px; /* Add spacing between sections */
             text-align: left; /* Left align text in all sections */
+            padding-left: 0; /* Ensure no padding on the left */
          }
          .section h4 {
             margin-left: 0; /* Ensure headings align to the left */
@@ -61,7 +60,7 @@
    <body>
       <div class="container">
          <header id="overview">
-            <img alt="" src="files/title2.png">
+            <img alt="" src="files/title2.png" style="display: block; margin: 0 auto;">
          </header>
         
          <div class="masthead">
@@ -171,16 +170,3 @@
       <script src="js/bootstrap.min.js"></script>
    </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
