--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
             <div class="row-fluid marketing">
                <div class="span12 section">
                   <h4>WELCOME!</h4> 
-                  <p>
-                     We are based in the Division of Humanities at Hong Kong University of Science and Technology.
-                  </p>
+                  <ol>
+                     <li>We are based in the Division of Humanities at Hong Kong University of Science and Technology.</li>
+                  </ol>
                </div>
 
                <div class="span12 section">
