--- a/index.html
+++ b/index.html
@@ -88,14 +88,13 @@
             </div>
          </div>
          <hr>
-         <div class="container-fluid">
-            <div class="row-fluid marketing">
                <div class="span12 section">
                   <h4>WELCOME!</h4> 
                   <ol>
-                     <li>We are based in the Division of Humanities at Hong Kong University of Science and Technology.</li>
+                     <b>We are based in the Division of Humanities at Hong Kong University of Science and Technology.</b>
                   </ol>
                </div>
+            
 
                <div class="span12 section">
                   <h4>News and Events</h4>
