--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                <div class="span12 section">
                   <h4>WELCOME!</h4> 
                   <p>
-                     <b>We are based in the Division of Humanities at Hong Kong University of Science and Technology.</b>
+                     We are based in the Division of Humanities at Hong Kong University of Science and Technology.
                   </p>
                </div>
             
@@ -133,6 +133,9 @@
                   <h4>We are interested in...</h4>
                   <p>
                      <li><b>Second-language learning of speech prosody </b></li>
+                        <p>
+                           It is well established that the first language (L1) is claimed to be responsible for second-language learners’ (in)ability to process sounds in a new language. However, the conditions under which the L1 facilitates or inhibits the learning of new sounds have yet to be understood. Adopting phonetic and psycholinguistic approaches,our research focuses on how lexical tones (Mandarin tones: /pā/ ‘eight’ T1, /pá/ ‘to pull out’ T2, /pǎ/ ‘to hold’ T3, /pà/ ‘father’ T4) and lexical stress (English stress: DEsert vs.deSSERT) are processed by adult second-language learners who speak different languages as L1.
+                        </p>
                      <li><b>Sleep-dependent consolidation of lexical tones</b></li>
                      <li><b>Aging, cognitive, and language learning</b></li>
                   </p>
