--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          .responsive-img {
             width: 100%;
             height: auto;
-            max-width: 455px; /* Ensure images are not too wide */
+            max-width: 300px; /* Ensure images are not too wide */
          }
          .img-container {
             display: flex;
@@ -37,6 +37,7 @@
             font-size: 24px;
             margin-top: 40px; /* Increase spacing above section headings */
             margin-bottom: 20px; /* Increase spacing below section headings */
+            text-align: center; /* Center the heading */
          }
          p {
             font-size: 18px;
@@ -48,8 +49,16 @@
             text-align: left; /* Left align text in all sections */
             padding-left: 0; /* Ensure no padding on the left */
          }
-         .section h4 {
-            margin-left: 0; /* Ensure headings align to the left */
+         .content-with-image {
+            display: flex;
+            align-items: flex-start; /* Align content at the start */
+         }
+         .text-content {
+            flex: 1;
+            padding-right: 20px;
+         }
+         .image-content {
+            flex: 0 0 auto;
          }
          .contact-section {
             padding-top: 20px;
@@ -99,7 +108,7 @@
                <div class="span12 section">
                   <h4>News and Events</h4>
                   <div style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 10px;">
-                      <p>
+                      <ol>
                           <li>05/08/2024 Jiayu LIANG, who graduated from Shandong University, joined our lab as RA!</li>				
                           <li>02/08/2024 Jeremy presented our Aging project at the <a href="https://goldenage.foundation/en/gaes2024">9th Golden Age Expo and Summit (GAES)</a>.</li>
                           <li>31/07/2024 Yuqi successfully defended her MPhil thesis titled "Cantonese Tone Processing in the Forced-attention Dichotic Listening Task by Cantonese-dominant Bilingual Speakers”.</li>
@@ -125,26 +134,22 @@
                           <li>01/10/2022 Our project about sleep and mental health was funded by <a href="https://ssc.hkust.edu.hk/projects/empowering-our-community-for-positive-change/staying-smart-by-taking-a-nap">Sustainable Smart Campus as a Living Lab Project.</a></li>
                           <li>01/09/2022 Our project about ageing and language learning was funded by HKUST <a href="https://iems.ust.hk/updates/iems-updates/2022/announcing-iems-grants-2022">IEMS Research Grants.</a></li>
                           <li>01/09/2022 Welcome to two new members Ruofan WU (RA) and Yuqi WANG (RPG)! And farewell to our team alum Rui Jin.</li>
-                      </p>
+                      </ol>
                   </div>
                </div>
 
                <div class="span12 section">
                   <h4>We are interested in...</h4>
-                  <p>
-                     <li><b>Second-language learning of speech prosody </b></li>
+                  <div class="content-with-image">
+                     <div class="text-content">
+                        <p><b>Second-language learning of speech prosody </b></p>
                         <p>
-                           It is well established that the first language (L1) is claimed to be responsible for second-language learners’ (in)ability to process sounds in a new language. However, the conditions under which the L1 facilitates or inhibits the learning of new sounds have yet to be understood. Adopting phonetic and psycholinguistic approaches,our research focuses on how lexical tones (Mandarin tones: /pā/ ‘eight’ T1, /pá/ ‘to pull out’ T2, /pǎ/ ‘to hold’ T3, /pà/ ‘father’ T4) and lexical stress (English stress: DEsert vs.deSSERT) are processed by adult second-language learners who speak different languages as L1.
+                           It is well established that the first language (L1) is claimed to be responsible for second-language learners’ (in)ability to process sounds in a new language. However, the conditions under which the L1 facilitates or inhibits the learning of new sounds have yet to be understood. Adopting phonetic and psycholinguistic approaches, our research focuses on how lexical tones (Mandarin tones: /pā/ ‘eight’ T1, /pá/ ‘to pull out’ T2, /pǎ/ ‘to hold’ T3, /pà/ ‘father’ T4) and lexical stress (English stress: DEsert vs. deSERT) are processed by adult second-language learners who speak different languages as L1.
                         </p>
-                     <li><b>Sleep-dependent consolidation of lexical tones</b></li>
-                     <li><b>Aging, cognitive, and language learning</b></li>
-                  </p>
-
-
-
-                  <div class="img-container">
-                      <img src="files/poster_240313_MOST.png" alt="HMRF" class="responsive-img" style='border:1.5px solid #000000' />
-                      <img src="files/poster_240112_HMRF.jpg" alt="MOST" class="responsive-img" style='border:1.5px solid #000000' />
+                     </div>
+                     <div class="image-content">
+                        <img src="files/Theme1.png" alt="Illustration" class="responsive-img">
+                     </div>
                   </div>
                </div>
 
